Bug 892392 - Execute BluetoothService::StartInternal() at startup, r=gyeh